Automatico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declarationList
Rule 2     declarationList -> declarationList declaration
Rule 3     declarationList -> declaration
Rule 4     declaration -> varDeclaration
Rule 5     declaration -> funDeclaration
Rule 6     declaration -> comment
Rule 7     comment -> BLOCKCOMMENT
Rule 8     varDeclaration -> typeSpecifier varDeclList SEMMICOLON
Rule 9     varDeclList -> varDeclList COMMA varDecInitialize
Rule 10    varDeclList -> varDecInitialize
Rule 11    varDecInitialize -> varDeclId
Rule 12    varDecInitialize -> varDeclId ASSIGMENT simpleExpression
Rule 13    varDeclId -> IDENTIFIER
Rule 14    varDeclId -> IDENTIFIER LBRACKET INTNUMBER RBRACKET
Rule 15    typeSpecifier -> INT
Rule 16    typeSpecifier -> FLOAT
Rule 17    typeSpecifier -> CHAR
Rule 18    typeSpecifier -> BOOL
Rule 19    typeSpecifier -> VOID
Rule 20    funDeclaration -> typeSpecifier IDENTIFIER LPAREN params RPAREN statement
Rule 21    params -> paramList
Rule 22    params -> empty
Rule 23    paramList -> paramList SEMMICOLON paramTypeList
Rule 24    paramList -> paramTypeList
Rule 25    paramTypeList -> typeSpecifier paramIdList
Rule 26    paramIdList -> paramIdList COMMA paramId
Rule 27    paramIdList -> paramId
Rule 28    paramId -> IDENTIFIER
Rule 29    paramId -> IDENTIFIER LBRACKET RBRACKET
Rule 30    compoundStmt -> LBRACE localDeclarations statementList RBRACE
Rule 31    localDeclarations -> localDeclarations varDeclaration
Rule 32    localDeclarations -> empty
Rule 33    statementList -> statementList statement
Rule 34    statementList -> empty
Rule 35    statementList -> comment
Rule 36    statement -> expressionStmt
Rule 37    statement -> compoundStmt
Rule 38    statement -> selectionStmt
Rule 39    statement -> iterationStmt
Rule 40    statement -> returnStmt
Rule 41    statement -> breakStmt
Rule 42    expressionStmt -> expression SEMMICOLON
Rule 43    expressionStmt -> SEMMICOLON
Rule 44    selectionStmt -> IF LPAREN expression RPAREN statement
Rule 45    selectionStmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 46    iterationStmt -> WHILE LPAREN expression RPAREN statement
Rule 47    iterationStmt -> FOR LPAREN IDENTIFIER IN IDENTIFIER RPAREN statement
Rule 48    iterationStmt -> DO statement WHILE LPAREN expression RPAREN statement
Rule 49    returnStmt -> RETURN SEMMICOLON
Rule 50    returnStmt -> RETURN expression SEMMICOLON
Rule 51    breakStmt -> BREAK SEMMICOLON
Rule 52    expression -> IDENTIFIER ASSIGMENT expression
Rule 53    expression -> IDENTIFIER PLUS ASSIGMENT expression
Rule 54    expression -> IDENTIFIER MINUS ASSIGMENT expression
Rule 55    expression -> simpleExpression
Rule 56    var -> IDENTIFIER
Rule 57    var -> IDENTIFIER LBRACKET expression RBRACKET
Rule 58    simpleExpression -> simpleExpression OR orExpression
Rule 59    simpleExpression -> orExpression
Rule 60    orExpression -> orExpression AND unaryRelExpression
Rule 61    orExpression -> unaryRelExpression
Rule 62    unaryRelExpression -> NOT unaryRelExpression
Rule 63    unaryRelExpression -> relExpression
Rule 64    relExpression -> addExpression relop addExpression
Rule 65    relExpression -> addExpression
Rule 66    relop -> GREATER
Rule 67    relop -> LOWER
Rule 68    relop -> EQUALS
Rule 69    relop -> GREATERTHAN
Rule 70    relop -> LOWERTHAN
Rule 71    addExpression -> addExpression addop term
Rule 72    addExpression -> term
Rule 73    addop -> PLUS
Rule 74    addop -> MINUS
Rule 75    term -> term mulop unaryExpression
Rule 76    term -> unaryExpression
Rule 77    mulop -> TIMES
Rule 78    mulop -> DIVIDE
Rule 79    mulop -> MOD
Rule 80    unaryExpression -> unaryExpression
Rule 81    unaryExpression -> factor
Rule 82    factor -> LBRACKET expression RBRACKET
Rule 83    factor -> var
Rule 84    factor -> call
Rule 85    factor -> constant
Rule 86    constant -> INTNUMBER
Rule 87    constant -> FLOATNUMBER
Rule 88    constant -> FALSE
Rule 89    constant -> TRUE
Rule 90    call -> IDENTIFIER LBRACKET args RBRACKET
Rule 91    args -> argList
Rule 92    args -> empty
Rule 93    argList -> argList COMMA expression
Rule 94    argList -> expression
Rule 95    empty -> <empty>

Terminals, with rules where they appear

AND                  : 60
ASSIGMENT            : 12 52 53 54
BLOCKCOMMENT         : 7
BOOL                 : 18
BREAK                : 51
CHAR                 : 17
COMMA                : 9 26 93
DIVIDE               : 78
DO                   : 48
ELSE                 : 45
EQUALS               : 68
FALSE                : 88
FLOAT                : 16
FLOATNUMBER          : 87
FOR                  : 47
GREATER              : 66
GREATERTHAN          : 69
IDENTIFIER           : 13 14 20 28 29 47 47 52 53 54 56 57 90
IF                   : 44 45
IN                   : 47
INT                  : 15
INTNUMBER            : 14 86
LBRACE               : 30
LBRACKET             : 14 29 57 82 90
LOWER                : 67
LOWERTHAN            : 70
LPAREN               : 20 44 45 46 47 48
MINUS                : 54 74
MOD                  : 79
NOT                  : 62
OR                   : 58
PLUS                 : 53 73
RBRACE               : 30
RBRACKET             : 14 29 57 82 90
RETURN               : 49 50
RPAREN               : 20 44 45 46 47 48
SEMMICOLON           : 8 23 42 43 49 50 51
TIMES                : 77
TRUE                 : 89
VOID                 : 19
WHILE                : 46 48
error                : 

Nonterminals, with rules where they appear

addExpression        : 64 64 65 71
addop                : 71
argList              : 91 93
args                 : 90
breakStmt            : 41
call                 : 84
comment              : 6 35
compoundStmt         : 37
constant             : 85
declaration          : 2 3
declarationList      : 1 2
empty                : 22 32 34 92
expression           : 42 44 45 46 48 50 52 53 54 57 82 93 94
expressionStmt       : 36
factor               : 81
funDeclaration       : 5
iterationStmt        : 39
localDeclarations    : 30 31
mulop                : 75
orExpression         : 58 59 60
paramId              : 26 27
paramIdList          : 25 26
paramList            : 21 23
paramTypeList        : 23 24
params               : 20
program              : 0
relExpression        : 63
relop                : 64
returnStmt           : 40
selectionStmt        : 38
simpleExpression     : 12 55 58
statement            : 20 33 44 45 45 46 47 48 48
statementList        : 30 33
term                 : 71 72 75
typeSpecifier        : 8 20 25
unaryExpression      : 75 76 80
unaryRelExpression   : 60 61 62
var                  : 83
varDecInitialize     : 9 10
varDeclId            : 11 12
varDeclList          : 8 9
varDeclaration       : 4 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarationList
    (2) declarationList -> . declarationList declaration
    (3) declarationList -> . declaration
    (4) declaration -> . varDeclaration
    (5) declaration -> . funDeclaration
    (6) declaration -> . comment
    (8) varDeclaration -> . typeSpecifier varDeclList SEMMICOLON
    (20) funDeclaration -> . typeSpecifier IDENTIFIER LPAREN params RPAREN statement
    (7) comment -> . BLOCKCOMMENT
    (15) typeSpecifier -> . INT
    (16) typeSpecifier -> . FLOAT
    (17) typeSpecifier -> . CHAR
    (18) typeSpecifier -> . BOOL
    (19) typeSpecifier -> . VOID

    BLOCKCOMMENT    shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11
    BOOL            shift and go to state 12
    VOID            shift and go to state 13

    program                        shift and go to state 1
    declarationList                shift and go to state 2
    declaration                    shift and go to state 3
    varDeclaration                 shift and go to state 4
    funDeclaration                 shift and go to state 5
    comment                        shift and go to state 6
    typeSpecifier                  shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> declarationList .
    (2) declarationList -> declarationList . declaration
    (4) declaration -> . varDeclaration
    (5) declaration -> . funDeclaration
    (6) declaration -> . comment
    (8) varDeclaration -> . typeSpecifier varDeclList SEMMICOLON
    (20) funDeclaration -> . typeSpecifier IDENTIFIER LPAREN params RPAREN statement
    (7) comment -> . BLOCKCOMMENT
    (15) typeSpecifier -> . INT
    (16) typeSpecifier -> . FLOAT
    (17) typeSpecifier -> . CHAR
    (18) typeSpecifier -> . BOOL
    (19) typeSpecifier -> . VOID

    $end            reduce using rule 1 (program -> declarationList .)
    BLOCKCOMMENT    shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11
    BOOL            shift and go to state 12
    VOID            shift and go to state 13

    declaration                    shift and go to state 14
    varDeclaration                 shift and go to state 4
    funDeclaration                 shift and go to state 5
    comment                        shift and go to state 6
    typeSpecifier                  shift and go to state 7

state 3

    (3) declarationList -> declaration .

    BLOCKCOMMENT    reduce using rule 3 (declarationList -> declaration .)
    INT             reduce using rule 3 (declarationList -> declaration .)
    FLOAT           reduce using rule 3 (declarationList -> declaration .)
    CHAR            reduce using rule 3 (declarationList -> declaration .)
    BOOL            reduce using rule 3 (declarationList -> declaration .)
    VOID            reduce using rule 3 (declarationList -> declaration .)
    $end            reduce using rule 3 (declarationList -> declaration .)


state 4

    (4) declaration -> varDeclaration .

    BLOCKCOMMENT    reduce using rule 4 (declaration -> varDeclaration .)
    INT             reduce using rule 4 (declaration -> varDeclaration .)
    FLOAT           reduce using rule 4 (declaration -> varDeclaration .)
    CHAR            reduce using rule 4 (declaration -> varDeclaration .)
    BOOL            reduce using rule 4 (declaration -> varDeclaration .)
    VOID            reduce using rule 4 (declaration -> varDeclaration .)
    $end            reduce using rule 4 (declaration -> varDeclaration .)


state 5

    (5) declaration -> funDeclaration .

    BLOCKCOMMENT    reduce using rule 5 (declaration -> funDeclaration .)
    INT             reduce using rule 5 (declaration -> funDeclaration .)
    FLOAT           reduce using rule 5 (declaration -> funDeclaration .)
    CHAR            reduce using rule 5 (declaration -> funDeclaration .)
    BOOL            reduce using rule 5 (declaration -> funDeclaration .)
    VOID            reduce using rule 5 (declaration -> funDeclaration .)
    $end            reduce using rule 5 (declaration -> funDeclaration .)


state 6

    (6) declaration -> comment .

    BLOCKCOMMENT    reduce using rule 6 (declaration -> comment .)
    INT             reduce using rule 6 (declaration -> comment .)
    FLOAT           reduce using rule 6 (declaration -> comment .)
    CHAR            reduce using rule 6 (declaration -> comment .)
    BOOL            reduce using rule 6 (declaration -> comment .)
    VOID            reduce using rule 6 (declaration -> comment .)
    $end            reduce using rule 6 (declaration -> comment .)


state 7

    (8) varDeclaration -> typeSpecifier . varDeclList SEMMICOLON
    (20) funDeclaration -> typeSpecifier . IDENTIFIER LPAREN params RPAREN statement
    (9) varDeclList -> . varDeclList COMMA varDecInitialize
    (10) varDeclList -> . varDecInitialize
    (11) varDecInitialize -> . varDeclId
    (12) varDecInitialize -> . varDeclId ASSIGMENT simpleExpression
    (13) varDeclId -> . IDENTIFIER
    (14) varDeclId -> . IDENTIFIER LBRACKET INTNUMBER RBRACKET

    IDENTIFIER      shift and go to state 16

    varDeclList                    shift and go to state 15
    varDecInitialize               shift and go to state 17
    varDeclId                      shift and go to state 18

state 8

    (7) comment -> BLOCKCOMMENT .

    BLOCKCOMMENT    reduce using rule 7 (comment -> BLOCKCOMMENT .)
    INT             reduce using rule 7 (comment -> BLOCKCOMMENT .)
    FLOAT           reduce using rule 7 (comment -> BLOCKCOMMENT .)
    CHAR            reduce using rule 7 (comment -> BLOCKCOMMENT .)
    BOOL            reduce using rule 7 (comment -> BLOCKCOMMENT .)
    VOID            reduce using rule 7 (comment -> BLOCKCOMMENT .)
    $end            reduce using rule 7 (comment -> BLOCKCOMMENT .)
    RBRACE          reduce using rule 7 (comment -> BLOCKCOMMENT .)
    SEMMICOLON      reduce using rule 7 (comment -> BLOCKCOMMENT .)
    LBRACE          reduce using rule 7 (comment -> BLOCKCOMMENT .)
    IF              reduce using rule 7 (comment -> BLOCKCOMMENT .)
    WHILE           reduce using rule 7 (comment -> BLOCKCOMMENT .)
    FOR             reduce using rule 7 (comment -> BLOCKCOMMENT .)
    DO              reduce using rule 7 (comment -> BLOCKCOMMENT .)
    RETURN          reduce using rule 7 (comment -> BLOCKCOMMENT .)
    BREAK           reduce using rule 7 (comment -> BLOCKCOMMENT .)
    IDENTIFIER      reduce using rule 7 (comment -> BLOCKCOMMENT .)
    NOT             reduce using rule 7 (comment -> BLOCKCOMMENT .)
    LBRACKET        reduce using rule 7 (comment -> BLOCKCOMMENT .)
    INTNUMBER       reduce using rule 7 (comment -> BLOCKCOMMENT .)
    FLOATNUMBER     reduce using rule 7 (comment -> BLOCKCOMMENT .)
    FALSE           reduce using rule 7 (comment -> BLOCKCOMMENT .)
    TRUE            reduce using rule 7 (comment -> BLOCKCOMMENT .)


state 9

    (15) typeSpecifier -> INT .

    IDENTIFIER      reduce using rule 15 (typeSpecifier -> INT .)


state 10

    (16) typeSpecifier -> FLOAT .

    IDENTIFIER      reduce using rule 16 (typeSpecifier -> FLOAT .)


state 11

    (17) typeSpecifier -> CHAR .

    IDENTIFIER      reduce using rule 17 (typeSpecifier -> CHAR .)


state 12

    (18) typeSpecifier -> BOOL .

    IDENTIFIER      reduce using rule 18 (typeSpecifier -> BOOL .)


state 13

    (19) typeSpecifier -> VOID .

    IDENTIFIER      reduce using rule 19 (typeSpecifier -> VOID .)


state 14

    (2) declarationList -> declarationList declaration .

    BLOCKCOMMENT    reduce using rule 2 (declarationList -> declarationList declaration .)
    INT             reduce using rule 2 (declarationList -> declarationList declaration .)
    FLOAT           reduce using rule 2 (declarationList -> declarationList declaration .)
    CHAR            reduce using rule 2 (declarationList -> declarationList declaration .)
    BOOL            reduce using rule 2 (declarationList -> declarationList declaration .)
    VOID            reduce using rule 2 (declarationList -> declarationList declaration .)
    $end            reduce using rule 2 (declarationList -> declarationList declaration .)


state 15

    (8) varDeclaration -> typeSpecifier varDeclList . SEMMICOLON
    (9) varDeclList -> varDeclList . COMMA varDecInitialize

    SEMMICOLON      shift and go to state 19
    COMMA           shift and go to state 20


state 16

    (20) funDeclaration -> typeSpecifier IDENTIFIER . LPAREN params RPAREN statement
    (13) varDeclId -> IDENTIFIER .
    (14) varDeclId -> IDENTIFIER . LBRACKET INTNUMBER RBRACKET

    LPAREN          shift and go to state 21
    ASSIGMENT       reduce using rule 13 (varDeclId -> IDENTIFIER .)
    SEMMICOLON      reduce using rule 13 (varDeclId -> IDENTIFIER .)
    COMMA           reduce using rule 13 (varDeclId -> IDENTIFIER .)
    LBRACKET        shift and go to state 22


state 17

    (10) varDeclList -> varDecInitialize .

    SEMMICOLON      reduce using rule 10 (varDeclList -> varDecInitialize .)
    COMMA           reduce using rule 10 (varDeclList -> varDecInitialize .)


state 18

    (11) varDecInitialize -> varDeclId .
    (12) varDecInitialize -> varDeclId . ASSIGMENT simpleExpression

    SEMMICOLON      reduce using rule 11 (varDecInitialize -> varDeclId .)
    COMMA           reduce using rule 11 (varDecInitialize -> varDeclId .)
    ASSIGMENT       shift and go to state 23


state 19

    (8) varDeclaration -> typeSpecifier varDeclList SEMMICOLON .

    BLOCKCOMMENT    reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    INT             reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    FLOAT           reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    CHAR            reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    BOOL            reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    VOID            reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    $end            reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    RBRACE          reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    SEMMICOLON      reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    LBRACE          reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    IF              reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    WHILE           reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    FOR             reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    DO              reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    RETURN          reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    BREAK           reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    IDENTIFIER      reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    NOT             reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    LBRACKET        reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    INTNUMBER       reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    FLOATNUMBER     reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    FALSE           reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)
    TRUE            reduce using rule 8 (varDeclaration -> typeSpecifier varDeclList SEMMICOLON .)


state 20

    (9) varDeclList -> varDeclList COMMA . varDecInitialize
    (11) varDecInitialize -> . varDeclId
    (12) varDecInitialize -> . varDeclId ASSIGMENT simpleExpression
    (13) varDeclId -> . IDENTIFIER
    (14) varDeclId -> . IDENTIFIER LBRACKET INTNUMBER RBRACKET

    IDENTIFIER      shift and go to state 25

    varDecInitialize               shift and go to state 24
    varDeclId                      shift and go to state 18

state 21

    (20) funDeclaration -> typeSpecifier IDENTIFIER LPAREN . params RPAREN statement
    (21) params -> . paramList
    (22) params -> . empty
    (23) paramList -> . paramList SEMMICOLON paramTypeList
    (24) paramList -> . paramTypeList
    (95) empty -> .
    (25) paramTypeList -> . typeSpecifier paramIdList
    (15) typeSpecifier -> . INT
    (16) typeSpecifier -> . FLOAT
    (17) typeSpecifier -> . CHAR
    (18) typeSpecifier -> . BOOL
    (19) typeSpecifier -> . VOID

    RPAREN          reduce using rule 95 (empty -> .)
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11
    BOOL            shift and go to state 12
    VOID            shift and go to state 13

    typeSpecifier                  shift and go to state 26
    params                         shift and go to state 27
    paramList                      shift and go to state 28
    empty                          shift and go to state 29
    paramTypeList                  shift and go to state 30

state 22

    (14) varDeclId -> IDENTIFIER LBRACKET . INTNUMBER RBRACKET

    INTNUMBER       shift and go to state 31


state 23

    (12) varDecInitialize -> varDeclId ASSIGMENT . simpleExpression
    (58) simpleExpression -> . simpleExpression OR orExpression
    (59) simpleExpression -> . orExpression
    (60) orExpression -> . orExpression AND unaryRelExpression
    (61) orExpression -> . unaryRelExpression
    (62) unaryRelExpression -> . NOT unaryRelExpression
    (63) unaryRelExpression -> . relExpression
    (64) relExpression -> . addExpression relop addExpression
    (65) relExpression -> . addExpression
    (71) addExpression -> . addExpression addop term
    (72) addExpression -> . term
    (75) term -> . term mulop unaryExpression
    (76) term -> . unaryExpression
    (80) unaryExpression -> . unaryExpression
    (81) unaryExpression -> . factor
    (82) factor -> . LBRACKET expression RBRACKET
    (83) factor -> . var
    (84) factor -> . call
    (85) factor -> . constant
    (56) var -> . IDENTIFIER
    (57) var -> . IDENTIFIER LBRACKET expression RBRACKET
    (90) call -> . IDENTIFIER LBRACKET args RBRACKET
    (86) constant -> . INTNUMBER
    (87) constant -> . FLOATNUMBER
    (88) constant -> . FALSE
    (89) constant -> . TRUE

    NOT             shift and go to state 35
    LBRACKET        shift and go to state 41
    IDENTIFIER      shift and go to state 45
    INTNUMBER       shift and go to state 46
    FLOATNUMBER     shift and go to state 47
    FALSE           shift and go to state 48
    TRUE            shift and go to state 49

    simpleExpression               shift and go to state 32
    orExpression                   shift and go to state 33
    unaryRelExpression             shift and go to state 34
    relExpression                  shift and go to state 36
    addExpression                  shift and go to state 37
    term                           shift and go to state 38
    unaryExpression                shift and go to state 39
    factor                         shift and go to state 40
    var                            shift and go to state 42
    call                           shift and go to state 43
    constant                       shift and go to state 44

state 24

    (9) varDeclList -> varDeclList COMMA varDecInitialize .

    SEMMICOLON      reduce using rule 9 (varDeclList -> varDeclList COMMA varDecInitialize .)
    COMMA           reduce using rule 9 (varDeclList -> varDeclList COMMA varDecInitialize .)


state 25

    (13) varDeclId -> IDENTIFIER .
    (14) varDeclId -> IDENTIFIER . LBRACKET INTNUMBER RBRACKET

    ASSIGMENT       reduce using rule 13 (varDeclId -> IDENTIFIER .)
    SEMMICOLON      reduce using rule 13 (varDeclId -> IDENTIFIER .)
    COMMA           reduce using rule 13 (varDeclId -> IDENTIFIER .)
    LBRACKET        shift and go to state 22


state 26

    (25) paramTypeList -> typeSpecifier . paramIdList
    (26) paramIdList -> . paramIdList COMMA paramId
    (27) paramIdList -> . paramId
    (28) paramId -> . IDENTIFIER
    (29) paramId -> . IDENTIFIER LBRACKET RBRACKET

    IDENTIFIER      shift and go to state 52

    paramIdList                    shift and go to state 50
    paramId                        shift and go to state 51

state 27

    (20) funDeclaration -> typeSpecifier IDENTIFIER LPAREN params . RPAREN statement

    RPAREN          shift and go to state 53


state 28

    (21) params -> paramList .
    (23) paramList -> paramList . SEMMICOLON paramTypeList

    RPAREN          reduce using rule 21 (params -> paramList .)
    SEMMICOLON      shift and go to state 54


state 29

    (22) params -> empty .

    RPAREN          reduce using rule 22 (params -> empty .)


state 30

    (24) paramList -> paramTypeList .

    SEMMICOLON      reduce using rule 24 (paramList -> paramTypeList .)
    RPAREN          reduce using rule 24 (paramList -> paramTypeList .)


state 31

    (14) varDeclId -> IDENTIFIER LBRACKET INTNUMBER . RBRACKET

    RBRACKET        shift and go to state 55


state 32

    (12) varDecInitialize -> varDeclId ASSIGMENT simpleExpression .
    (58) simpleExpression -> simpleExpression . OR orExpression

    SEMMICOLON      reduce using rule 12 (varDecInitialize -> varDeclId ASSIGMENT simpleExpression .)
    COMMA           reduce using rule 12 (varDecInitialize -> varDeclId ASSIGMENT simpleExpression .)
    OR              shift and go to state 56


state 33

    (59) simpleExpression -> orExpression .
    (60) orExpression -> orExpression . AND unaryRelExpression

    OR              reduce using rule 59 (simpleExpression -> orExpression .)
    SEMMICOLON      reduce using rule 59 (simpleExpression -> orExpression .)
    COMMA           reduce using rule 59 (simpleExpression -> orExpression .)
    RBRACKET        reduce using rule 59 (simpleExpression -> orExpression .)
    RPAREN          reduce using rule 59 (simpleExpression -> orExpression .)
    AND             shift and go to state 57


state 34

    (61) orExpression -> unaryRelExpression .

    AND             reduce using rule 61 (orExpression -> unaryRelExpression .)
    OR              reduce using rule 61 (orExpression -> unaryRelExpression .)
    SEMMICOLON      reduce using rule 61 (orExpression -> unaryRelExpression .)
    COMMA           reduce using rule 61 (orExpression -> unaryRelExpression .)
    RBRACKET        reduce using rule 61 (orExpression -> unaryRelExpression .)
    RPAREN          reduce using rule 61 (orExpression -> unaryRelExpression .)


state 35
